# serializer version: 1
# name: test_create[config]
  dict({
    'backflush_enabled': False,
    'bbw_settings': None,
    'boilers': dict({
      <BoilerType.COFFEE: 'CoffeeBoiler1'>: dict({
        'current_temperature': 96.5,
        'enabled': True,
        'target_temperature': 95,
      }),
      <BoilerType.STEAM: 'SteamBoiler'>: dict({
        'current_temperature': 123.80000305175781,
        'enabled': True,
        'target_temperature': 123.9000015258789,
      }),
    }),
    'brew_active': False,
    'brew_active_duration': 0,
    'dose_hot_water': 8,
    'doses': dict({
      <PhysicalKey.A: 1>: 135,
      <PhysicalKey.B: 2>: 97,
      <PhysicalKey.C: 3>: 108,
      <PhysicalKey.D: 4>: 121,
    }),
    'plumbed_in': True,
    'prebrew_configuration': dict({
      <PhysicalKey.A: 1>: tuple(
        dict({
          'off_time': 1,
          'on_time': 0.5,
        }),
        dict({
          'off_time': 4,
          'on_time': 0,
        }),
      ),
      <PhysicalKey.B: 2>: tuple(
        dict({
          'off_time': 1,
          'on_time': 0.5,
        }),
        dict({
          'off_time': 4,
          'on_time': 0,
        }),
      ),
      <PhysicalKey.C: 3>: tuple(
        dict({
          'off_time': 3.3,
          'on_time': 3.3,
        }),
        dict({
          'off_time': 4,
          'on_time': 0,
        }),
      ),
      <PhysicalKey.D: 4>: tuple(
        dict({
          'off_time': 2,
          'on_time': 2,
        }),
        dict({
          'off_time': 4,
          'on_time': 0,
        }),
      ),
    }),
    'prebrew_mode': <PrebrewMode.PREINFUSION: 'TypeB'>,
    'scale': None,
    'smart_standby': dict({
      'enabled': True,
      'minutes': 10,
      'mode': <SmartStandbyMode.LAST_BREWING: 'LastBrewing'>,
    }),
    'turned_on': True,
    'wake_up_sleep_entries': dict({
      'Os2OswX': dict({
        'days': list([
          <WeekDay.MONDAY: 'monday'>,
          <WeekDay.TUESDAY: 'tuesday'>,
          <WeekDay.WEDNESDAY: 'wednesday'>,
          <WeekDay.THURSDAY: 'thursday'>,
          <WeekDay.FRIDAY: 'friday'>,
          <WeekDay.SATURDAY: 'saturday'>,
          <WeekDay.SUNDAY: 'sunday'>,
        ]),
        'enabled': False,
        'entry_id': 'Os2OswX',
        'steam': True,
        'time_off': '24:0',
        'time_on': '24:0',
      }),
    }),
    'water_contact': True,
  })
# ---
# name: test_create[firmware]
  dict({
    <FirmwareType.GATEWAY: 'gateway'>: LaMarzoccoFirmware(current_version='v2.2-rc0', latest_version='v2.2-rc0'),
    <FirmwareType.MACHINE: 'machine'>: LaMarzoccoFirmware(current_version='1.11', latest_version='1.12'),
  })
# ---
# name: test_create[statistics]
  LaMarzoccoCoffeeStatistics(drink_stats={<PhysicalKey.A: 1>: 167, <PhysicalKey.B: 2>: 0, <PhysicalKey.C: 3>: 0, <PhysicalKey.D: 4>: 0}, continous=0, total_flushes=228)
# ---
# name: test_mini
  dict({
    'backflush_enabled': False,
    'bbw_settings': dict({
      'active_dose': <PhysicalKey.A: 1>,
      'doses': dict({
        <PhysicalKey.A: 1>: 32,
        <PhysicalKey.B: 2>: 45,
      }),
    }),
    'boilers': dict({
      <BoilerType.COFFEE: 'CoffeeBoiler1'>: dict({
        'current_temperature': 42,
        'enabled': True,
        'target_temperature': 89,
      }),
      <BoilerType.STEAM: 'SteamBoiler'>: dict({
        'current_temperature': 0,
        'enabled': False,
        'target_temperature': 0,
      }),
    }),
    'brew_active': False,
    'brew_active_duration': 0,
    'dose_hot_water': 0,
    'doses': dict({
      <PhysicalKey.A: 1>: 32,
    }),
    'plumbed_in': False,
    'prebrew_configuration': dict({
      <PhysicalKey.A: 1>: tuple(
        dict({
          'off_time': 3,
          'on_time': 2,
        }),
        dict({
          'off_time': 3,
          'on_time': 0,
        }),
      ),
    }),
    'prebrew_mode': <PrebrewMode.PREBREW: 'TypeA'>,
    'scale': dict({
      'address': '44:b7:d0:74:5f:90',
      'battery': 64,
      'connected': False,
      'name': 'LMZ-123A45',
    }),
    'smart_standby': dict({
      'enabled': True,
      'minutes': 10,
      'mode': <SmartStandbyMode.LAST_BREWING: 'LastBrewing'>,
    }),
    'turned_on': False,
    'wake_up_sleep_entries': dict({
      'T6aLl42': dict({
        'days': list([
          <WeekDay.MONDAY: 'monday'>,
          <WeekDay.TUESDAY: 'tuesday'>,
          <WeekDay.WEDNESDAY: 'wednesday'>,
          <WeekDay.THURSDAY: 'thursday'>,
          <WeekDay.FRIDAY: 'friday'>,
          <WeekDay.SATURDAY: 'saturday'>,
          <WeekDay.SUNDAY: 'sunday'>,
        ]),
        'enabled': False,
        'entry_id': 'T6aLl42',
        'steam': False,
        'time_off': '24:0',
        'time_on': '24:0',
      }),
    }),
    'water_contact': True,
  })
# ---
